# UDRMS

./: CMakeLists.txt  README.md  dormitorywidget.cpp  dormitorywidget.h  dormitorywidget.ui  restaurantwidget.cpp  restaurantwidget.h  restaurantwidget.ui  studentwidget.cpp  studentwidget.h  studentwidget.ui  udrms.cpp  udrms.h  udrms.ui  welcome.cpp  welcome.h  welcome.ui
src/core/: dormitory.cpp  dormitory.h  filemanager.cpp  filemanager.h  menu.cpp  menu.h  restaurant.cpp  restaurant.h  room.cpp  room.h  student.cpp  student.h  university.cpp  university.h  university.txt
src/data/: university.txt
